--- a/Section1_scRNA_snRNA_DataProcessing/README
+++ b/Section1_scRNA_snRNA_DataProcessing/README
@@ -5,6 +5,6 @@ GSE171524: COVID-19 lung snRNA
 GSE155249: COVID-19 BAL scRNA
 GSE149878: COVID-19 lung scRNA
 GSE188172: COVID-19 PBMC scRNA
-GSE216704: COVID-19 PBMC scRNA
+GSE216704: COVID-19 BAL scRNA
 GSE128033: IPF BAL scRNA
 GSE192483: TB lung scRNA
