--- a/Section1_scRNA_snRNA_DataProcessing/README
+++ b/Section1_scRNA_snRNA_DataProcessing/README
@@ -1,4 +1,4 @@
-scRNA and snRNA Data Process
+scRNA and snRNA Data Processing
 ==========================================================================
 These data can be download from NCBI GEO website with their accession number
 GSE171524: COVID-19 lung snRNA
